gallery alignment fixed

--- a/css/page-css/gallery.css
+++ b/css/page-css/gallery.css
@@ -29,7 +29,9 @@ body {
 .column {
     flex: 25%;
     max-width: 25%;
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .column img {
